project/stage/testing/semantic/semantic_tests/reject/id_in_var_assign_not_recognized.ul
void main() {
    id = 1;
}
